fix spacing in about section

--- a/css/mediastyles.css
+++ b/css/mediastyles.css
@@ -65,6 +65,7 @@
   .column-container {
     flex-direction: column;
     align-items: center;
+    gap: 2rem;
   }
   .about-right {
     gap: 2rem;
